# Boop-GTK

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  PKGBUILD  README.md  boop-gtk.desktop  boop-gtk.glade  boop.lang  bors.toml  build.rs  convert-icons.sh  dependabot.yml  gen-sources.sh  scripts
.github/workflows/: cargo.yml  ci.yml  convert-icons.yml  manual.yml  release.yml  rust.yml  try-release.yml
config/: default.toml
data/: fyi.zoey.Boop-GTK.desktop  fyi.zoey.Boop-GTK.metainfo.xml
docker/: aarch64-unknown-linux-gnu.Dockerfile  docker-build.sh  x86_64-pc-windows-gnu.Dockerfile  x86_64-unknown-linux-gnu.Dockerfile
docs/: CreatingAPNGs.md  GlobalScripts.md  demo.webm  index.html
flatpak/: fyi.zoey.Boop-GTK.json  gen-sources.sh  generated-sources.json  uk.co.mrbenshef.Boop-GTK.json
flatpak/data/: uk.co.mrbenshef.Boop-GTK.desktop  uk.co.mrbenshef.Boop-GTK.metainfo.xml
resources/: boop-gtk.glade  command-palette.glade
scripts/: round-corners.sh
snap/: snapcraft.yaml
snap/gui/: boop-gtk.desktop
src/: app.rs  command_pallete.rs  config.rs  executor.rs  main.rs  preferences_dialog.rs  script.rs  scriptmap.rs  scripts  scripts.rs  util.rs
src/ui/: about_dialog.rs  app.rs  command_palette.rs  command_pallete.rs  mod.rs  preferences_dialog.rs  shortcuts_window.rs
ui/: boop-gtk.glade  command-pallete.glade
windows/: build.ps1  make-bundle.ps1
wix/: License.rtf  main.wxs  settings.ini
