[package]
name = "boop-gtk"
build = "build.rs"
version = "1.4.0"
authors = ["Ben Sheffield"]
edition = "2018"
description = """A scriptable scratchpad for developers

Port of @IvanMathy's Boop to GTK
"""
license = "MIT"
homepage = "https://boop-gtk.mrbenshef.co.uk"
repository = "https://github.com/mrbenshef/boop-gtk/"
keywords = ["gtk", "text-editor", "editor", "linux", "javascript"]
categories = ["text-editors"]
exclude = [
    "submodules/flatpak-builder-tools", 
    "submodules/gvsbuild", 
    "submodules/svg-stroke-to-path", 
    "submodules/Windows-10-Dark",
    "flatpak",
    "snap",
    "wix",
]

[profile.dev]
lto = "off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GTK
glib = "0.10"
gdk = "0.13"
gdk-pixbuf = "0.9"
pango = "0.9"
sourceview = "0.9"
# GTK utils
gladis = "0.4.1"
gladis_proc_macro = "0.4.1"
shrinkwraprs = "0.3.0"
# V8
rusty_v8 = "0.12.0"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_jsonrc = "0.1"
# Logging
log = "0.4.11"
env_logger = "0.8.2"
# Fuzzy search
fuse-rust = "0.1.2"
# File system
open = "1.4.0"
directories = "3.0"
notify = "5.0.0-pre.2"
# Misc utils
lazy_static = "1.4.0"
rust-embed = { version = "5.6.0", features = ["debug-embed"] }
dirty2 = "0.1.0"
simple-error = "0.2"
crossbeam = "0.8.0"

[dependencies.gtk]
version = "0.9"
features = ["v3_16"]

[dependencies.gio]
version = "0.9"
features = ["v2_44"]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile = "3.1.0"

[build-dependencies]
fs_extra = "1.2.0"
