[package]
name = "boop-gtk"
build = "build.rs"
version = "1.6.0"
authors = ["Zoey Sheffield"]
edition = "2018"
description = """A scriptable scratchpad for developers

Port of @IvanMathy's Boop to GTK
"""
license = "MIT"
homepage = "https://boop-gtk.zoey.fyi"
repository = "https://github.com/zoeyfyi/boop-gtk/"
keywords = ["gtk", "text-editor", "editor", "linux", "javascript"]
categories = ["text-editors"]
exclude = [
    "submodules/flatpak-builder-tools", 
    "submodules/svg-stroke-to-path", 
    "flatpak",
    "snap"
]

[profile.dev]
lto = "off"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GTK
glib = "0.10"
gdk = "0.13"
gdk-pixbuf = "0.9"
pango = "0.9"
sourceview = "0.9"
# GTK utils
gladis = "0.4.1"
gladis_proc_macro = "0.4.1"
shrinkwraprs = "0.3.0"
# V8
rusty_v8 = "0.19.0"
# JSON
serde = { version = "1.0", features = ["derive"] }
serde_jsonrc = "0.1"
# Logging
log = "0.4.14"
env_logger = "0.8.3"
# Fuzzy search
fuse-rust = "0.2.0"
# File system
open = "1.4.0"
directories = "3.0"
notify = "5.0.0-pre.6"
# Misc utils
lazy_static = "1.4.0"
once_cell = "1.6.0"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }
dirty2 = "0.1.0"
simple-error = "0.2"
crossbeam = "0.8.0"
fs_extra = "1.2.0"

[dependencies.gtk]
version = "0.9"
features = ["v3_20"]

[dependencies.gio]
version = "0.9"
features = ["v2_44"]

[dev-dependencies]
tempfile = "3.2.0"

[build-dependencies]
fs_extra = "1.2.0"
